# azure-iot-gateway-sdk

./: .gitignore  CMakeLists.txt
bindings/: CMakeLists.txt
bindings/nodejs/: CMakeLists.txt
bindings/nodejs/src/: nodejs.cpp
core/src/: message.c
core/tests/gwmessage_unittests/: gwmessage_unittests.c
doc/: getting_started.md
tools/: build.cmd
